link fixes and formatting
