# swagger_output.json
@@ -7,21 +7,13 @@
   },
   "host": "localhost:8006",
   "basePath": "/",
-  "schemes": [
-    "http"
-  ],
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ],
+  "schemes": ["http"],
+  "consumes": ["application/json"],
+  "produces": ["application/json"],
   "paths": {
     "/auth/logout": {
       "get": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "description": "",
         "parameters": [],
         "responses": {}
@@ -29,9 +21,7 @@
     },
     "/auth/register": {
       "post": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "description": "",
         "parameters": [
           {
@@ -58,9 +48,7 @@
     },
     "/auth/login": {
       "post": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "description": "",
         "parameters": [
           {
@@ -84,9 +72,7 @@
     },
     "/auth/requestEmailToken": {
       "post": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "description": "",
         "parameters": [
           {
@@ -107,9 +93,7 @@
     },
     "/auth/verifyEmail": {
       "post": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "description": "",
         "parameters": [
           {
@@ -137,9 +121,7 @@
     },
     "/auth/forgotPassword": {
       "post": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "description": "",
         "parameters": [
           {
@@ -160,9 +142,7 @@
     },
     "/auth/resetPassword": {
       "put": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "description": "",
         "parameters": [
           {
@@ -189,9 +169,7 @@
     },
     "/auth/updatePassword": {
       "put": {
-        "tags": [
-          "auth"
-        ],
+        "tags": ["auth"],
         "description": "",
         "parameters": [
           {
